<resources>
    <string name="app_name">PyMESoft</string>
    <string name="app_name2">Invoices</string>
    <string name="Purchase">Purchase</string>
    <string name="Invoice">Invoice</string>
    <string name="Draft">Draft</string>
    <string name="Customer_Name">Customer Name</string>
    <string name="Product_Name">Product Name</string>
    <string name="Date">Date</string>
    <string name="Total">Total</string>
    <string name="Doc_list">Document List</string>
    <string name="New_Costumer">New Costumer</string>
    <string name="New_Product">New Product</string>
    <string name="Costumers">Customer</string>
    <string name="Products">Products</string>
    <string name="Product">Product</string>
    <string name="Pre_order">PreOrder</string>
    <string name="Product_name">Product Name</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>
    <string name="Add">Add</string>
    <string name="Tax">Tax</string>
    <string name="Taxes">Taxes</string>
    <string name="Logo">Logo</string>
    <string name="Signature">Signature</string>
    <string name="Due_Date">Due Date</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Invoice_info">Invoice Info</string>
    <string name="Products_Resume">Products Resume</string>
    <string name="Payment_Term">Payment term</string>
    <string name="Days">Days</string>
    <string name="Sales">Sales</string>
    <string name="Receipts">Receipts</string>
    <string name="Delete">Delete</string>
    ////
    <string name="Select">Select</string>
    <string name="Open_PDF">Open PDF</string>
    <string name="Notes">Notes</string>
    <string name="leyenda_impuesto">Tax Included on Tota</string>
    <string name="Choose_One">Choose one</string>
    <string name="Confirmation_Cart">Please kindly review the info before adding this item to the cart</string>
    <string name="No">NO</string>
    <string name="Yes">YES</string>
    <string name="Quote">Quote</string>
    <string name="Tax_included">Tax is Included</string>
    <string name="Acept">Ok</string>
    <string name="Discount">Discount</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Email">E-mail</string>
    <string name="Mobile_phone">Mobile Phone</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="ZIP">ZIP</string>
    <string name="Save_newCli">Save new Client</string>
    <string name="Phone_contact">Also save as a phone Contact</string>
    <string name="Description">Product Description</string>
    <string name="Settings">Settings</string>
    <string name="CompanyName">Company Name</string>
    <string name="Language">Language</string>
    <string name="PdfTemplate">Pdf Template</string>
    <string name="CompanyInfo">Company Info</string>
    <string name="AppSettings">App Settings</string>
    <string name="AccountInfo">Account Info</string>
    <string name="Tax2">Tax 2</string>
    <string name="Ritmo">Pace on Price</string>
    <string name="Delitem">This action will delete this Item permanently</string>
    <string name="rusure">Are you sure?</string>
    <string name="Edit">Edit</string>
    <string name="Category">Category</string>





    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="q">q</string>
    <string name="w">w</string>
    <string name="e">e</string>
    <string name="r">r</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_punto">.</string>
    <string name="_0">0</string>
    <string name="_add">+</string>
    <string name="title_activity_navigate">navigate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_Home">Home</string>
    <string name="_Calculadora">Calculadora</string>
    <string name="_Nuevo">Nuevo</string>
    <string name="_home">_home</string>
    <string name="more">more</string>
    <string name="home">Home</string>
    <string name="Nuevo">Nuevo</string>
    <string name="Pdf">Pdf</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="facebook_app_id">615672052643545</string>
    <string name="fb_login_protocol_scheme">fb615672052643545</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preparacion">Preparacion</string>
    <string name="Catálogo">Catálogo</string>
    <string name="Clientes">Cliente</string>
    <string name="Calc">Calc</string>
    <string name="Vista">Revisar</string>
    <string name="title_activity_preparacionas">preparacionas</string>
    <string name="title_activity_getdata_tab">getdata_tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_select_languaje">SelectLanguaje</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
