<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_calc"
        android:enabled="true"
        android:icon="@drawable/ic_smartp"
        android:title="Calculadora"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/Nuevo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/ic_restaurant"
        android:title="@string/more"
        app:showAsAction="never" />
</menu>