<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/yesnoconstraint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardconfirmation"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="300dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/txtittle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_weight="40"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Delitem"
                android:textColor="#FFFFFF"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/txcontent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="60"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/rusure"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/Cancel"
        app:backgroundTint="@color/colorGrisoscuro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardconfirmation">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Acept"
        app:layout_constraintStart_toEndOf="@+id/boton_no"
        app:layout_constraintTop_toBottomOf="@id/cardconfirmation"></com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>